--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     container_name: postgres
     image: postgres
     environment:
-      POSTGRES_USER:user
+      POSTGRES_USER:username
       POSTGRES_PASSWORD:password
       PGDATA:/data/postgres
     volumes:
