--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,41 @@
+version: '3.8'
+
 services:
   postgres:
     container_name: postgres
     image: postgres
     environment:
-      POSTGRES_USER:username
-      POSTGRES_PASSWORD:password
-      PGDATA:/data/postgres
+      POSTGRES_USER: username
+      POSTGRES_PASSWORD: password
+      PGDATA: /data/postgres # Ensure correct formatting here
     volumes:
-      -  postgres:/data/postgres
+      - postgres:/data/postgres
     ports:
       - "5432:5432"
     networks:
       - postgres
     restart: unless-stopped
-    pgadmin:
-      container_name: pgadmin
-      image: dpage/pgadmin4
-      environment:
-        PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin4}
-        PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
-        PGADMIN_CONFIG_SERVER_MODE: 'False'
-      volumes:
-        - pgadmin:/var/lib/pgadmin
 
-      ports:
-        - "5050:80"
-      networks:
-        - postgres
-      restart: unless-stopped
+  pgadmin:
+    container_name: pgadmin
+    image: dpage/pgadmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: oussama.belhajrhouma@etudiant-fst.utm.tn
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
+      PGADMIN_CONFIG_SERVER_MODE: 'False'
+    volumes:
+      - pgadmin:/var/lib/pgadmin
+    ports:
+      - "5050:80"
+    networks:
+      - postgres
+    restart: unless-stopped
+  zipkin:
+    image: openzipkin/zipkin
+    container_name: zipkin
+    ports:
+      - "9411:9411"
+
 networks:
   postgres:
     driver: bridge
@@ -35,6 +43,3 @@ networks:
 volumes:
   postgres:
   pgadmin:
-
-
-
