--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
   <url>http://www.example.com</url>
   <modules>
     <module>costumer</module>
+    <module>fraud</module>
+    <module>eureka-server</module>
+      <module>clients</module>
   </modules>
 
   <properties>
@@ -22,6 +25,7 @@
     <maven.compiler.target>17</maven.compiler.target>
     <spring.boot.dependencies.version>2.5.7</spring.boot.dependencies.version>
     <spring.boot.dependencies.version>2.5.7</spring.boot.dependencies.version>
+    <spring-cloud.version>2020.0.3</spring-cloud.version>
   </properties>
 
   <dependencyManagement>
@@ -32,6 +36,13 @@
         <scope>import</scope>
         <version>${spring.boot.dependencies.version}</version>
         <type>pom</type>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>${spring-cloud.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -46,7 +57,14 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <version>${spring.boot.dependencies.version}</version>
-
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-openfeign</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-sleuth</artifactId>
     </dependency>
   </dependencies>
 
